VDR Plugin 'menuorg' Revision History
-------------------------------------

2007-08-24: Version 0.1

- Initial revision.

2007-08-25: Version 0.2

- Fixed bug with burn plug-in - cPlugin::MainMenuEntry() should not be called
  before all plug-ins Intialize() and Start() were called.

2007-08-25: Version 0.3

- Fixed charset conversion for menu titles. They will now explicitly be converted
  to VDR's locale charset falling back to ISO8859-2 on conversion errors.

2007-12-11: Version 0.3.1

- Applied I18N-Patch from Thomas Guenther for VDR 1.5.12
- Fixed Problem with hidden plug-in menu entries or plug-ins without a main menu
  item

2007-12-17: Version 0.3.2

- Added Italian translation from the
  Italian VDR Community <vdr-italian@tiscali.it>

2008-03-23: Version 0.4

- Added optional title attribute for system and plugin menu items, which allows
  the displayed text to be changed
- Added a Seperator Item
- Now an empty submenu can exist
- Now VDR >= 1.5.18 is required
- When leaving a submenu, the cursor is now positioned on the submenu entry
- The custom menu can now be enabled/disabled in the plug-in's setup
- If the timestamp of the menuorg.xml changes, it will be reloaded when opening
  the root menu

2008-03-24: Version 0.4.1

- Fixed small bug caused by hidden menu entries

2008-03-25: Version 0.4.2

- Separator items now don't have a hotkey (number) in the OSD menu anymore
  (requires the patch to be updated once more)
- Added French translation by NIVAL Michaël <mnival@club-internet.fr>

2008-03-26: Version 0.4.3

- Updated Italian translation by Diego Pierotto <vdr-italian@tiscali.it>

2008-07-12: Version 0.4.4

- Fixed GCC4.3 FTBFS

2011-02-05: Version 0.4.5

- Added Slowak translation (Closes #563)
- When entering root menu, always select the first menu entry (Closes #792)
- Dropped debian packaging directory