@@ -25,6 +25,7 @@
 #include <vdr/plugin.h>
 #include "ChildLock.h"
 #include "IMenuNodeProcessor.h"
+#include <cstddef>
 
 using namespace std;
 
